chore: setup logging

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ JWT_REFRESH_SECRET="your-refresh-secret-key-here-change-in-production"
 
 # Server
 PORT=3000
+NODE_ENV=development
+
+# Logging
+# LOG_LEVEL options: error, warn, info, debug
+LOG_LEVEL=debug
