--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,15 @@ JWT_REFRESH_SECRET="your-refresh-secret-key-here-change-in-production"
 
 # Server
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
-# Logging
+
 # LOG_LEVEL options: error, warn, info, debug
 LOG_LEVEL=debug
+
+S3_ENDPOINT="is3.cloudhost.id"
+S3_BUCKET="nama_bucket_anda"
+S3_REGION=auto
+S3_ACCESS_KEY="akses_key_anda"
+S3_SECRET_KEY="secret_key_anda"
+
