fix(users): fix minor bug ketika mendaftarkan user

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,18 @@ JWT_SECRET="your-secret-key-here-change-in-production"
 JWT_REFRESH_SECRET="your-refresh-secret-key-here-change-in-production"
 
 # Server
-PORT=3000
-NODE_ENV=production
+PORT="3000"
+NODE_ENV="production"
+
+# CORS Configuration (comma-separated origins)
+CORS_ORIGINS="http://localhost:3000,https://scituinsk.com"
 
 
-# LOG_LEVEL options: error, warn, info, debug
+# Log Level options: error, warn, info, debug
 LOG_LEVEL=debug
 
+
+# S3 Configuration
 S3_ENDPOINT="is3.cloudhost.id"
 S3_BUCKET="nama_bucket_anda"
 S3_REGION=auto
